# KitchenScheduling

./: .gitignore  1 project and technical  2 functional and data model  3 Rules and outputs  Noting additional requirements  README.md  Requirements Summary Keynote.key  Scheduling Requirements
app/backend/: .env  .env.example  README.md  docker-compose.yml  pyproject.toml  seed.sql
app/backend/alembic/: env.py
app/backend/alembic/versions/: 20241102_0001_initial_schema.py  20241104_0002_add_rule_config.py  20241104_0003_add_scenario_violations.py  20241104_0004_add_planversion_created_at.py  20241105_0005_resource_availability_absences.py  20241107_0006_resource_monthly_balance.py
app/backend/scripts/: generate_seed_sql.py  lint.sh  run_tests.sh  seed_demo.py
app/backend/src/kitchen_scheduler/: main.py
app/backend/src/kitchen_scheduler/core/: config.py  security.py
app/backend/src/kitchen_scheduler/db/: base.py
app/backend/src/kitchen_scheduler/repositories/: planning.py  resource.py  shift.py  system.py  versioning.py
app/backend/src/kitchen_scheduler/schemas/: planning.py  resource.py  system.py
app/backend/src/kitchen_scheduler/services/: holidays.py  rules.py  scheduler.py  (+1 more)
app/backend/src/kitchen_scheduler_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
app/backend/tests/: conftest.py  docker-compose.yml  factories.py  test_api_planning.py  test_api_resources.py  test_api_shifts.py  test_api_system.py  test_planning.py  test_resources.py  test_rules.py  test_scheduler.py  test_shifts.py  test_system.py  utils.py
(+39 files in other folders)
